force-app/main/default/objects/Opportunity/fields/FOPS_Certifications_Required__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Certifications_Required__c</fullName>
    <label>Certifications Required</label>
    <length>255</length>
    <type>Text</type>
</CustomField>