force-app/main/default/objects/Opportunity/fields/FOPS_Duration_Months__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Duration_Months__c</fullName>
    <label>Duration (Months)</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>