force-app/main/default/objects/Opportunity/fields/FOPS_Engagement_Type__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Engagement_Type__c</fullName>
    <label>Engagement Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contract</fullName>
            </value>
            <value>
                <fullName>Freelance Project</fullName>
            </value>
            <value>
                <fullName>Contract-to-Hire</fullName>
            </value>
            <value>
                <fullName>Permanent</fullName>
            </value>
            <value>
                <fullName>Retainer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>