force-app/main/default/objects/Opportunity/fields/FOPS_Estimated_Total_Value_Base__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Estimated_Total_Value_Base__c</fullName>
    <label>Estimated Total Value (Base)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>