force-app/main/default/objects/Opportunity/fields/FOPS_Ghosted__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Ghosted__c</fullName>
    <inlineHelpText>No client response for 21+ days.</inlineHelpText>
    <label>Ghosted</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>