force-app/main/default/objects/Opportunity/fields/FOPS_Interview_Rounds_Expected__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Interview_Rounds_Expected__c</fullName>
    <label>Interview Rounds Expected</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>