force-app/main/default/objects/Opportunity/fields/FOPS_JD_Source_URL__c.field-meta.xml
<CustomField>
    <fullName>FOPS_JD_Source_URL__c</fullName>
    <label>JD Source URL</label>
    <type>Url</type>
</CustomField>