force-app/main/default/objects/Opportunity/fields/FOPS_Loss_Detail__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Loss_Detail__c</fullName>
    <label>Loss Detail</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>