force-app/main/default/objects/Opportunity/fields/FOPS_Loss_Reason__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Loss_Reason__c</fullName>
    <label>Loss Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rate too low</fullName>
            </value>
            <value>
                <fullName>Rate too high for client budget</fullName>
            </value>
            <value>
                <fullName>Failed technical interview</fullName>
            </value>
            <value>
                <fullName>Failed HR / culture screen</fullName>
            </value>
            <value>
                <fullName>Skill mismatch</fullName>
            </value>
            <value>
                <fullName>Timezone / location mismatch</fullName>
            </value>
            <value>
                <fullName>Role cancelled by client</fullName>
            </value>
            <value>
                <fullName>Role filled internally</fullName>
            </value>
            <value>
                <fullName>Lost to another candidate</fullName>
            </value>
            <value>
                <fullName>Client froze hiring</fullName>
            </value>
            <value>
                <fullName>Ghosted / no feedback</fullName>
            </value>
            <value>
                <fullName>Withdrew - better offer</fullName>
            </value>
            <value>
                <fullName>Withdrew - red flags</fullName>
            </value>
            <value>
                <fullName>Contract terms unacceptable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>