force-app/main/default/objects/Opportunity/fields/FOPS_Match_Score__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Match_Score__c</fullName>
    <label>Match Score</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>