force-app/main/default/objects/Opportunity/fields/FOPS_Normalised_Monthly_Base__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Normalised_Monthly_Base__c</fullName>
    <inlineHelpText>Lets you compare an hourly AUD offer to a monthly SGD offer.</inlineHelpText>
    <label>Normalised Monthly (Base)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>