force-app/main/default/objects/Opportunity/fields/FOPS_Normalised_Monthly_Value__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Normalised_Monthly_Value__c</fullName>
    <label>Normalised Monthly Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>