force-app/main/default/objects/Opportunity/fields/FOPS_Overlap_Hours_Required__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Overlap_Hours_Required__c</fullName>
    <label>Overlap Hours Required</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>