force-app/main/default/objects/Opportunity/fields/FOPS_Parsed_By__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Parsed_By__c</fullName>
    <label>JD Parsed By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Email Parser</fullName>
            </value>
            <value>
                <fullName>AI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>