force-app/main/default/objects/Opportunity/fields/FOPS_Proposed_Consultant__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Proposed_Consultant__c</fullName>
    <label>Proposed Consultant</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Proposed Pursuits</relationshipLabel>
    <relationshipName>FOPS_ProposedPursuits</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <type>Lookup</type>
</CustomField>