force-app/main/default/objects/Opportunity/fields/FOPS_Pursuit_Status__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Pursuit_Status__c</fullName>
    <inlineHelpText>Kept separate from Stage so the pipeline stays linear and forecastable.</inlineHelpText>
    <label>Pursuit Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>On Hold (Client)</fullName>
            </value>
            <value>
                <fullName>On Hold (Me)</fullName>
            </value>
            <value>
                <fullName>Cold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>