force-app/main/default/objects/Opportunity/fields/FOPS_Rate_Floor__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Rate_Floor__c</fullName>
    <inlineHelpText>Walk-away point.</inlineHelpText>
    <label>Rate Floor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>