force-app/main/default/objects/Opportunity/fields/FOPS_Rate_Offered__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Rate_Offered__c</fullName>
    <label>Rate Offered</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>