force-app/main/default/objects/Opportunity/fields/FOPS_Rate_Target__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Rate_Target__c</fullName>
    <inlineHelpText>Your ask.</inlineHelpText>
    <label>Rate Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>