force-app/main/default/objects/Opportunity/fields/FOPS_Raw_JD_Text__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Raw_JD_Text__c</fullName>
    <label>Raw JD Text</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>