force-app/main/default/objects/Opportunity/fields/FOPS_Red_Flags__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Red_Flags__c</fullName>
    <inlineHelpText>Unpaid trial task, vague scope, no PO, IP over-reach.</inlineHelpText>
    <label>Red Flags</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>