force-app/main/default/objects/Opportunity/fields/FOPS_Salesforce_Clouds__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Salesforce_Clouds__c</fullName>
    <label>Salesforce Clouds</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Experience</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Data</fullName>
            </value>
            <value>
                <fullName>Revenue</fullName>
            </value>
            <value>
                <fullName>Field Service</fullName>
            </value>
            <value>
                <fullName>Industries</fullName>
            </value>
            <value>
                <fullName>Agentforce</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>