force-app/main/default/objects/Opportunity/fields/FOPS_Seniority__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Seniority__c</fullName>
    <label>Seniority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Junior</fullName>
            </value>
            <value>
                <fullName>Mid</fullName>
            </value>
            <value>
                <fullName>Senior</fullName>
            </value>
            <value>
                <fullName>Lead</fullName>
            </value>
            <value>
                <fullName>Architect</fullName>
            </value>
            <value>
                <fullName>Principal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>