force-app/main/default/objects/Opportunity/fields/FOPS_Stage_Entered_Date__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Stage_Entered_Date__c</fullName>
    <label>Stage Entered Date</label>
    <type>DateTime</type>
</CustomField>